.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:16:48 **** Rebuild of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
23:16:56 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
..\src\4_MergeSort.c: In function 'main':
..\src\4_MergeSort.c:7:17: warning: unused variable 'array' [-Wunused-variable]
  int arraySize, array[2000], temp;
                 ^~~~~
..\src\4_MergeSort.c:7:6: warning: unused variable 'arraySize' [-Wunused-variable]
  int arraySize, array[2000], temp;
      ^~~~~~~~~
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
23:42:19 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
..\src\4_MergeSort.c: In function 'main':
..\src\4_MergeSort.c:69:19: error: expected expression before '[' token
  }else if (array2=[0] < array1[0] && array2[array2Size - 1] < array1[0]){
                   ^
..\src\4_MergeSort.c:7:17: warning: variable 'array' set but not used [-Wunused-but-set-variable]
  int arraySize, array[2000], temp;
                 ^~~~~
23:43:33 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
..\src\4_MergeSort.c: In function 'main':
..\src\4_MergeSort.c:7:17: warning: variable 'array' set but not used [-Wunused-but-set-variable]
  int arraySize, array[2000], temp;
                 ^~~~~
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
23:44:58 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
23:46:23 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
00:42:30 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
00:44:41 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
00:47:39 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
00:51:38 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
00:53:15 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
00:57:56 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
00:58:32 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
01:00:45 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
01:05:42 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
01:09:49 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:15:52 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:16:47 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:18:16 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:22:08 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:23:46 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:43:13 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
07:45:00 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
07:50:29 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
Info: Nothing to build for 4_MergeSort
08:00:25 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
08:09:33 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
08:10:27 **** Incremental Build of configuration Debug for project 4_MergeSort ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\4_MergeSort.o" "..\\src\\4_MergeSort.c" 
gcc -o 4_MergeSort.exe "src\\4_MergeSort.o" 
Info: Nothing to build for 4_MergeSort
Info: Nothing to build for 4_MergeSort
